# caduceus

./: .woodpecker.yml  Cargo.toml  LICENSE  README.md
data/homeserver-sbin/: manifest.json
data/legacy-sbin/: manifest.json
data/staff-actuators/: README.md  atomic-change-pin  bind  caduceus-bind  caduceus-network-dhcp  caduceus-verify  profile.json  verify
data/staff-actuators/caduceus_staff/: bind_derived.py  sacred_credential.py
data/staff-actuators/caduceus_staff/household_capability/: __init__.py  index.py
data/staff-actuators/caduceus_staff/network/: __init__.py  dhcp.py
docs/: coronatio-action-ledger.md
profiles/console/: index.json  index.yaml
profiles/homeserver/: index.json  index.yaml
profiles/tv/: index.json  index.yaml
src/: lib.rs  main.rs
src/bands/: actions.rs  cert.rs  config.rs  dhcp.rs  dns.rs  gui.rs  health.rs  help.rs  homeserver_sbin.rs  hyalos.rs  identity.rs  index.json  legacy_sbin.rs  local_ai.rs  mod.rs  network.rs  pjlink.rs  profile.rs  profile_module.rs  receipts.rs  serve.rs  staff.rs  sync.rs  update.rs
src/bands/cert/: README.md
src/tools/: access.rs  attendance.rs  command.rs  config.rs  harmonia.rs  hyalos.rs  mod.rs  pjlink.rs  policy.rs  receipts.rs  systemd.rs
tests/: access_contract.rs  attendance_contract.rs  cli_contract.rs  house_ca.rs  http_contract.rs  index.json  test_bind_derived.py  test_sacred_credential.py  test_staff_actuator_data.py
tests/bands/: README.md
tests/fixtures/console/etc/caduceus/: identity.json  profile.json  (+1 more)
tests/fixtures/staff/caduceus_staff/: __init__.py  house_ca.py
(+18 files in other folders)
