[package]
name = "caduceus"
version = "0.1.0"
edition = "2021"
description = "Public appliance-control lever for sovereign HOMESERVER devices"
license = "AGPL-3.0-or-later"

[[bin]]
name = "caduceus"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"