[package]
name = "caduceus"
version = "0.1.0"
edition = "2021"
description = "Public appliance-control lever for sovereign HOMESERVER devices"
license = "AGPL-3.0-or-later"

[[bin]]
name = "caduceus"
path = "src/main.rs"

[dependencies]
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
md5 = "0.7"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }